Changed colesseum image; fixed vatican alignment

--- a/style.css
+++ b/style.css
@@ -1111,10 +1111,9 @@ li {
 .colosseum-left {
     background-image: url(img/colosseum1.jpg);
     background-position: center;
-    background-size: 800px 550px;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 75vh;
-    margin-bottom: 30px;
 }
 
 .colosseum-right p {
@@ -1145,6 +1144,7 @@ li {
     background-image: url(img/vatican.jpg);
     background-size: cover;
     height: 75vh;
+    margin-top: -30px;
 }
 
 .vatican-left p {
@@ -1165,6 +1165,7 @@ li {
     padding-top: 55px;
     padding-bottom: 20px;
 }
+
 /* Plan Your Trip Page*/
 
 .plan-container {
